# ChangeLog for dev-java/slf4j-nop
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*slf4j-nop-1.7.5 (13 Jul 2013)

  13 Jul 2013; johann@j-schmitz.net +files/1.7.5-build.xml, +metadata.xml,
  +slf4j-nop-1.7.5.ebuild:
  Split out the -nop part of slf4j to comply with the existing package structure