@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2013; Johann Schmitz <ercpe@gentoo.org> files/1.7.5-build.xml,
+  slf4j-nop-1.7.5.ebuild:
+  polished ebuild for slf4j-nop
+
 *slf4j-nop-1.7.5 (13 Jul 2013)
 
   13 Jul 2013; johann@j-schmitz.net +files/1.7.5-build.xml, +metadata.xml,
